# deDuped

./: .gitignore  FEATURE_REQUESTS.md  PHOTO_DEDUP_SPEC.md  README.md  dedup_photos.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-19-code-review-fixes.md  2026-03-19-perceptual-hashing.md
docs/superpowers/specs/: 2026-03-19-perceptual-hashing-design.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actionlog.rs  cache.rs  commands.rs  fileops.rs  hasher.rs  lib.rs  main.rs  perceptual.rs  tests.rs
src/screens/: ResultsScreen.tsx  ScanningScreen.tsx  SetupScreen.tsx
