[package]
name = "photo-dedup"
version = "0.2.0"
edition = "2021"

[lib]
name = "photo_dedup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "photo-dedup"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5"
walkdir = "2"
hex = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "6"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
